--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firestore-admin-mock",
   "version": "1.0.0",
   "description": "Firestore intsance mock for the Firebase Admin SDK ",
-  "main": "index.js",
+  "main": "mock_constructors/FirestoreMock.js",
   "directories": {
     "test": "test"
   },
