--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/mwallacemn/firestore-admin-mock/issues"
   },
-  "homepage": "https://github.com/mwallacemn/firestore-admin-mock#readme"
+  "homepage": "https://github.com/mwallacemn/firestore-admin-mock#readme",
+  "keywords": [
+    "firebase",
+    "firestore",
+    "mock"
+  ]
 }
